--- a/dashboard.htm
+++ b/dashboard.htm
@@ -1,18 +1,36 @@
+<script src="SIPml-api.js?svn=252" type="text/javascript"> </script>
+<script src="dashboard/init_dashboard.js" type="text/javascript"> </script>
+
+<link rel="stylesheet" href="dashboard/dashboard.css">
 <div id="background">
     <button id="trigger_button">trigger</button>
     <div id="top-bar">
-        <h2>+601123456789 is calling in... </h2><button class='accept'></button><button class='decline'></button>
+        <h2>+601123456789 is calling in... </h2><button class='accept' onclick="(e) => {e.newSession.accept()}"></button><button class='decline'onclick="(e) => {e.newSession.reject()}"></button>
         <h2>+601123456789 is on the line <b>1:23</b></h2><input type="button" id="btnHangUp" class="btn btn-primary" value="HangUp" onclick='sipHangUp();' disabled />
         <input type="text" style="width: 100%; height:100%;" id="txtPhoneNumber" value="" placeholder="Enter phone number to call" />
         <div id="divBtnCallGroup" class="btn-group">
             <button id="btnCall" disabled class="btn btn-primary" data-toggle="dropdown">Call</button><div id='divCallOptions' class='call-options' style='opacity: 1; margin-top: 0px'></div>
         </div>&nbsp;&nbsp;
+        <div id='divCallOptions' class='call-options' style='opacity: 0; margin-top: 0px'>
+            <input type="button" class="btn" style="" id="btnFullScreen" value="FullScreen" disabled onclick='toggleFullScreen();' /> &nbsp;
+            <input type="button" class="btn" style="" id="btnMute" value="Mute" onclick='sipToggleMute();' /> &nbsp;
+            <input type="button" class="btn" style="" id="btnHoldResume" value="Hold" onclick='sipToggleHoldResume();' /> &nbsp;
+            <input type="button" class="btn" style="" id="btnTransfer" value="Transfer" onclick='sipTransfer();' /> &nbsp;
+            <input type="button" class="btn" style="" id="btnKeyPad" value="KeyPad" onclick='openKeyPad();' />
+        </div>
+        <ul id="ulCallOptions" class="dropdown-menu">
+            <li><a href="#" onclick='sipCall("call-audio");'>Audio</a></li>
+            <li><a href="#" onclick='sipCall("call-audiovideo");'>Video</a></li>
+            <li id='liScreenShare'><a href="#" onclick='sipShareScreen();'>Screen Share</a></li>
+            <li class="divider"></li>
+            <li><a href="#" onclick='uiDisableCallOptions();'><b>Disable these options</b></a></li>
+        </ul>
     </div>
     <div id="notification"></div>
     
     
     <div id="messageQueue"></div>
 </div>
-
+<script src="dashboard/dashboard.js" type="text/javascript"> </script>
 
 
