make and receive calls

--- a/log_in.htm
+++ b/log_in.htm
@@ -5,6 +5,7 @@
     <div class="wrapper fadeInDown">
         <label style="width: 100%;" align="center" id="txtRegStatus">
         </label>
+        <div>t</div>
         <div id="formContent">
             <label style="width: 100%;" align="center" id="txtRegStatus">
             </label>
