--- a/dashboard.htm
+++ b/dashboard.htm
@@ -2,6 +2,7 @@
 <script src="dashboard/init_dashboard.js" type="text/javascript"> </script>
 
 <link rel="stylesheet" href="dashboard/dashboard.css">
+<label style="width: 100%;" id="txtCallStatus"></label>
 <div id="background">
     <button id="trigger_button">trigger</button>
     <div id="top-bar">
@@ -18,6 +19,8 @@
             <input type="button" class="btn" style="" id="btnTransfer" value="Transfer" onclick='sipTransfer();' /> &nbsp;
             <input type="button" class="btn" style="" id="btnKeyPad" value="KeyPad" onclick='openKeyPad();' />
         </div>
+        
+        </label>
         <ul id="ulCallOptions" class="dropdown-menu">
             <li><a href="#" onclick='sipCall("call-audio");'>Audio</a></li>
             <li><a href="#" onclick='sipCall("call-audiovideo");'>Video</a></li>
