testing for adjust volume function
this version is not workable yet. currently undergoing testing

--- a/call.htm
+++ b/call.htm
@@ -453,6 +453,7 @@
                 saveCallOptions();
             }
             else if (oSipSessionCall) {
+                console.log("accept")
                 txtCallStatus.innerHTML = '<i>Connecting...</i>';
                 oSipSessionCall.accept(oConfigCall);
             }
