--- a/dashboard.htm
+++ b/dashboard.htm
@@ -30,7 +30,7 @@
         </ul>
     </div>
     <div id="notification"></div>
-    
+    <script></script>
     
     <div id="messageQueue"></div>
 </div>
